--- a/front/src/components/MovieSearch.css
+++ b/front/src/components/MovieSearch.css
@@ -2,10 +2,11 @@
   max-width: 800px;
   margin: 40px auto;
   padding: 50px;
-  background-color: #f9f9f9;
+  background-color: #2e2929;
   border: 1px solid #ddd;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  
 }
 
 .movie-search h2 {
@@ -18,7 +19,7 @@
 }
 
 .movie-search input[type="text"] {
-  width: 100%;
+  width: 97%;
   height: 40px;
   margin-bottom: 20px;
   padding: 10px;
@@ -27,7 +28,7 @@
 }
 
 .movie-search button {
-  width: 103%;
+  width: 100%;
   height: 40px;
   background-color: #4CAF50;
   color: #fff;
@@ -67,4 +68,8 @@
 
 .movie-info p {
   margin-bottom: 20px;
+}
+
+h3 {
+  color: white;
 }
