--- a/front/src/components/Userpage.css
+++ b/front/src/components/Userpage.css
@@ -29,7 +29,7 @@
   
 .film-card p {
   font-size: 14px;
-  color: #666;
+  color: white;
   margin-bottom: 20px;
 }
 
@@ -40,11 +40,14 @@
 
 .Remove-button {
   background-color: #f51505;
+  padding: 5px;
   border: 0;
   border-radius: 5%;
   color: #000;
 }
 
-.text {
-  color: white;
+image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
